# pos-kit

./: .env  INSTALL.md  MVP_SUMMARY.md  QUICKSTART.md  README.md  SETUP.md  TESTING_GUIDE.md  _config.yml  debug-server.js  docker-compose.mvp.yml  docker-compose.yml  http-server.js  package-lock.json  simple-server.js
backend/: .env  .env.example  Dockerfile  package-lock.json  package.json  tsconfig.json
backend/src/: app.module.ts  main.ts
backend/src/audit/: audit.controller.ts  audit.service.ts
backend/src/auth/: auth.controller.ts  auth.integration.spec.ts  auth.module.ts  auth.service.spec.ts  auth.service.ts  jwt.strategy.ts
backend/src/common/: common.module.ts
backend/src/devices/: devices.controller.ts  devices.service.ts
backend/src/inventory/: inventory.controller.ts  inventory.module.ts  (+1 more)
desktop-client/: Dockerfile  debug.html  index.html  nginx.proxy.conf.template  package-lock.json  package.json  tailwind.config.js  test-simple.html  tsconfig.json  vite.config.ts
desktop-client/src/: App.tsx  AppRouter.tsx  TestApp.tsx  config.ts  index.css  main-simple.tsx  main.tsx  test-app.tsx  test.tsx
desktop-client/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop-client/src-tauri/src/: lib.rs  main.rs
plan/: ARCHITECTURE.md  DEVELOPER_GUIDE.md  RESEARCH_SUMMARY.md  WINDSURF_AI_PROMPT.md  docker-compose.yml  openapi.yaml
scripts/: setup.sh
web-frontend/: Dockerfile  index.html  nginx.conf  nginx.standalone.conf.template  package-lock.json  package.json  tailwind.config.js  tsconfig.json
web-frontend/src/: App.tsx  AppRouter.tsx
(+91 files in other folders)
